--- a/dis.csproj
+++ b/dis.csproj
@@ -5,6 +5,7 @@
         <TargetFramework>net6.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <Version>2.2.0</Version>
     </PropertyGroup>
 
     <ItemGroup>
