--- a/dis.csproj
+++ b/dis.csproj
@@ -2,15 +2,16 @@
 
     <PropertyGroup>
         <OutputType>Exe</OutputType>
-        <TargetFramework>net6.0</TargetFramework>
+        <TargetFramework>net7.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
-        <Version>2.2.1</Version>
+        <Version>3.0.0</Version>
     </PropertyGroup>
 
     <ItemGroup>
       <PackageReference Include="System.CommandLine" Version="2.0.0-beta4.22272.1" />
       <PackageReference Include="Xabe.FFmpeg" Version="5.2.0" />
+      <PackageReference Include="YoutubeDLSharp" Version="1.0.0-beta" />
     </ItemGroup>
 
 </Project>
