--- a/dis.csproj
+++ b/dis.csproj
@@ -5,13 +5,16 @@
         <TargetFramework>net7.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
-        <Version>3.2.0</Version>
+        <Version>3.3.0</Version>
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="CliWrap" Version="3.6.0" />
+      <PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="2.2.0" />
+      <PackageReference Include="Pastel" Version="4.1.0" />
       <PackageReference Include="System.CommandLine" Version="2.0.0-beta4.22272.1" />
-      <PackageReference Include="Xabe.FFmpeg" Version="5.2.0" />
-      <PackageReference Include="YoutubeDLSharp" Version="1.0.0-beta2" />
+      <PackageReference Include="Xabe.FFmpeg" Version="5.2.3" />
+      <PackageReference Include="YoutubeDLSharp" Version="1.0.0-beta3" />
     </ItemGroup>
 
 </Project>
