--- a/dis.csproj
+++ b/dis.csproj
@@ -5,15 +5,15 @@
         <TargetFramework>net7.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
-	<Version>7.0.0</Version>
+	<Version>7.1.0</Version>
     </PropertyGroup>
 
     <ItemGroup>
       <PackageReference Include="Microsoft.AspNetCore.Hosting.Abstractions" Version="2.2.0" />
       <PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="2.2.0" />
-      <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0-preview.3.23174.8" />
-      <PackageReference Include="Serilog.AspNetCore" Version="7.0.0-dev-00302" />
-      <PackageReference Include="Serilog.Expressions" Version="3.4.2-dev-00119" />
+      <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0-preview.5.23280.8" />
+      <PackageReference Include="Serilog.AspNetCore" Version="7.0.0" />
+      <PackageReference Include="Serilog.Expressions" Version="3.4.2-dev-00120" />
       <PackageReference Include="System.CommandLine" Version="2.0.0-beta4.22272.1" />
       <PackageReference Include="Xabe.FFmpeg" Version="5.2.6" />
       <PackageReference Include="YoutubeDLSharp" Version="1.0.0-beta6" />
