--- a/dis.csproj
+++ b/dis.csproj
@@ -16,7 +16,7 @@
       <PackageReference Include="Serilog.Expressions" Version="3.4.2-dev-00120" />
       <PackageReference Include="System.CommandLine" Version="2.0.0-beta4.22272.1" />
       <PackageReference Include="Xabe.FFmpeg" Version="5.2.6" />
-      <PackageReference Include="YoutubeDLSharp" Version="1.0.0-beta6" />
+      <PackageReference Include="YoutubeDLSharp" Version="1.0.0" />
     </ItemGroup>
 
 </Project>
