--- a/dis.csproj
+++ b/dis.csproj
@@ -9,10 +9,11 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0-preview.7.23375.6" />
+      <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0-rc.1.23419.4" />
       <PackageReference Include="Serilog.AspNetCore" Version="7.0.0" />
-      <PackageReference Include="Serilog.Expressions" Version="3.4.2-dev-00120" />
-      <PackageReference Include="System.CommandLine" Version="2.0.0-beta4.22272.1" />
+      <PackageReference Include="Serilog.Expressions" Version="4.0.0-dev-00137" />
+      <PackageReference Include="System.CommandLine" Version="2.0.0-beta4.23407.1" />
+      <PackageReference Include="System.CommandLine.Hosting" Version="0.4.0-alpha.23407.1" />
       <PackageReference Include="Xabe.FFmpeg" Version="5.2.6" />
       <PackageReference Include="YoutubeDLSharp" Version="1.0.0" />
     </ItemGroup>
