Switching to Spectre.Console (#6)
* feat: init Spectre.Console

* refactor: delete System.CommandLine

* refactor(Spectre.Console): update rest of project

* chore(deps.nix): update nuget package

* docs(README.MD): reflect new changes

* chore(default.nix): bump version

--- a/dis.csproj
+++ b/dis.csproj
@@ -5,14 +5,20 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <Version>8.1.6</Version>
+    <Version>9.0.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
-    <PackageReference Include="Serilog.AspNetCore" Version="8.0.0" />
-    <PackageReference Include="Serilog.Expressions" Version="4.0.0" />
-    <PackageReference Include="System.CommandLine" Version="2.0.0-beta4.23407.1" />
+    <PackageReference Include="Serilog.AspNetCore" Version="8.0.1" />
+    <PackageReference Include="Serilog.Expressions" Version="4.0.1-dev-00151" />
+    <PackageReference Include="Spectre.Console" Version="0.48.1-preview.0.20" />
+    <PackageReference Include="Spectre.Console.Analyzer" Version="0.48.1-preview.0.20">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Spectre.Console.Cli" Version="0.48.1-preview.0.20" />
+    <PackageReference Include="Spectre.Console.Extensions.Progress" Version="1.0.0" />
     <PackageReference Include="Xabe.FFmpeg" Version="5.2.6" />
     <PackageReference Include="YoutubeDLSharp" Version="1.0.0" />
   </ItemGroup>
